Enable `end-` as additional block end statement